# django-rest

./: .env.template  README.md  commands.txt  pyproject.toml
drf/: requirements.txt
drf/app/: settings.py  urls.py
