[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["fbrcode <fabio.bressler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-dotenv = "^0.21.0"
djangorestframework = "^3.14.0"
djangorestframework-jsonapi = "^6.0.0"
django-extensions = "^3.2.1"
django-filter = "^22.1"
tzdata = "^2022.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
